--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
 	<script type="text/javascript" src="js/toggle.js"></script>
 </head>
 <body>
+		<div name="header" id="header">akhdaoudasdoasudusdiouasdkljasl</div>
 		<iframe name="thoughtworks" id="thoughtworks" onmouseover="showFrame()" width="25%" height="99%" src="./thoughtworks.html"></iframe>
 		<iframe name="calendar" id="calendar" width="74%" height="99%" src="http://www.google.com/calendar/render"></iframe>
 </body>
