--- a/villages.html
+++ b/villages.html
@@ -9,7 +9,7 @@
 	* Keep this notice intact for use.
 	***********************************************/
 	</script>
-	<script type="text/javascript" src="js/vvcal.js"></script>
+	<script type="text/javascript" src="js/villages.js"></script>
 </head>
 <body>
 	<center><b>VILLAGES</b></center><br>
