--- a/villages.html
+++ b/villages.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<script src="http://www.google.com/jsapi?key=ABQIAAAADRnyuq2mdBHBb4iDhmtuZBQM-KuWdanIH38iecu_8v3ev4H-ExS0xaUAQQ_5vEh_jAbxnNm5CqTd2Q" type="text/javascript"></script>
+	<script src="http://www.google.com/jsapi?key=ABQIAAAAKYmOqEXuSTJLmIQnR5PK0BT2yXp_ZAY8_ufC3CFXhHIE1NvwkxRY1xD4kh0qjbX_xcdZnGjjKoA4cA" type="text/javascript"></script>
 	<script type="text/javascript" src="js/calendarDateInput.js">
 
 	/***********************************************
@@ -10,6 +10,7 @@
 	***********************************************/
 	</script>
 	<script type="text/javascript" src="js/villages.js"></script>
+	<link rel="stylesheet" href="css/example.css" TYPE="text/css" MEDIA="screen">
 </head>
 <body>
 	<center><b>VILLAGES</b></center><br>
