--- a/trunk/thoughtworks.html
+++ b/trunk/thoughtworks.html
@@ -14,6 +14,6 @@
 		</div>
 	</div>
 	<br>
-	<div id="toggle" name="toggle" onclick="hideFrame()" align="center">Hide This Frame</div>
+	<center><input type="button" name="toggle" id="toggle" value="Hide This Frame" onclick="hideFrame()"></center>
 </body>
 </html>
