--- a/trunk/thoughtworks.html
+++ b/trunk/thoughtworks.html
@@ -10,10 +10,10 @@
 			<iframe name="villages" tab="villages" width="99%" height="89%" frameborder="0" marginheight="0" marginwidth= "0" src="villages_empty.html"></iframe>
  		</div>
 		<div class="tabbertab" title="Volunteers">
-			<iframe name="volunteers" tab="volunteers" width="99%" height="89%" frameborder="0" marginheight="0" marginwidth= "0" src="volunteers_empty.html"></iframe>
+			<iframe name="volunteers" tab="volunteers" width="99%" height="89%" frameborder="0" marginheight="0" marginwidth= "0" src="volunteers.html"></iframe>
 		</div>
 	</div>
 	<br>
-	<center><input type="button" name="toggle" id="toggle" value="Hide This Frame" onclick="hideFrame()"></center>
+	<center><input type="button" name="toggle" value="Hide This Frame" id="toggle" onclick="hideFrame()"></center>
 </body>
 </html>
