--- a/volunteers.html
+++ b/volunteers.html
@@ -3,6 +3,33 @@
     <title>Village Volunteers Calendar Mashup</title>
     <script type="text/javascript" src="http://www.google.com/jsapi?key=ABQIAAAAKYmOqEXuSTJLmIQnR5PK0BT2yXp_ZAY8_ufC3CFXhHIE1NvwkxRY1xD4kh0qjbX_xcdZnGjjKoA4cA"></script>
     <script type="text/javascript" src="js/volunteers.js"></script>
+	<script type="text/javascript">
+		function volunteer(firstName, lastName, email, phone) {
+			this.firstName 	= firstName;
+			this.lastName = lastName;
+			this.email = email;
+			this.phone = phone;
+		}
+		var SelectOne = new volunteer("Select", "One", "Volunteer not selected", "Volunteer not selected");
+		var Jimmy = new volunteer("Jimmy", "Staggs", "jimmy@tw.com", "555-555-5555");
+		var Jeremy = new volunteer("Jeremy", "Stitz", "jeremy@tw.com", "555-555-2222");
+		var Holly = new volunteer("Holly", "Bowen", "holly@tw.com", "555-555-1111");
+		var volunteer_list = new Array();
+		volunteer_list[0] = SelectOne;
+		volunteer_list[1] = Jimmy;
+		volunteer_list[2] = Jeremy;
+		volunteer_list[3] = Holly;
+
+		function displayInfo(objval)
+		{
+			var contactInfo;
+			contactInfo = "<u><strong>Contact Information</strong></u><br>";
+			contactInfo += "Email: " + volunteer_list[objval].email + "<br>";
+			contactInfo += "Phone: " + volunteer_list[objval].phone + "<br>";
+			document.getElementById("info").innerHTML=contactInfo;
+		}
+
+    </script>
 
   </head>
   <body>
