--- a/trunk/thoughtworks.html
+++ b/trunk/thoughtworks.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="tabber" name="tabber" class="tabber">
 		<div class="tabbertab" title="Villages">
-			<iframe name="villages" tab="villages" width="99%" height="89%" frameborder="0" marginheight="0" marginwidth= "0" src="villages_empty.html"></iframe>
+			<iframe name="villages" tab="villages" width="99%" height="89%" frameborder="0" marginheight="0" marginwidth= "0" src="villages.html"></iframe>
  		</div>
 		<div class="tabbertab" title="Volunteers">
 			<iframe name="volunteers" tab="volunteers" width="99%" height="89%" frameborder="0" marginheight="0" marginwidth= "0" src="volunteers.html"></iframe>
