--- a/villages.html
+++ b/villages.html
@@ -17,8 +17,10 @@
 		<script>DateInput('date', true, 'YYYY-MM-DD')</script>
 		<hr width="80%" align="center">
 	</div>
-
+	
 	<div id="villageItinerary"></div>
 
+	<img src="images/pixel.gif" />
+	<input type="button" value="Get Listing" onclick="initVillages();" />
 </body>
 </html>
