--- a/volunteers.html
+++ b/volunteers.html
@@ -7,15 +7,11 @@
 	<img src="images/pixel.gif" style="position: absolute; top: -10; left: 0;"/>
 	<div align="center">
 		<b>Please Select A Volunteer:</b><br>
-		<table>
-			<tr>
-				<td><span id="combo" name="combo"/></td>
-				<td><input type="button" value="Go" onclick="displayItinerary();" /></td>
-			</tr>
-		</table>
+		<span id="combo" name="combo"></span>
 		<hr width="80%" align="center">
 	</div>
-	<span id="info" name="info" />
-	<span id="itinerary" name="info" />
+	<span id="info" name="info">&nbsp;</span>
+	<br>
+	<span id="itinerary" name="itinerary">&nbsp;</span>
 </body>
 </html>
